graphics tab alignment fix - part 2

--- a/apps/desktop/styles/graphics.pcss
+++ b/apps/desktop/styles/graphics.pcss
@@ -139,9 +139,8 @@
   /* height: 192px; */
   /* height:90%; */
   border: 2px;
-  width: 540px;
-  top: 170px;
-  overflow: auto;
+  //width: 540px;
+  //top: 170px;
 }
 
 .unit {
